# LCD2004d

./: Makefile.am  README.md  configure  configure.ac  lcd2004.service  run.sh
autom4te.cache/: output.0  requests  traces.0
scripts/: Makefile.am
src/: LCD2004d  LCD2004d.c  Makefile.am
